Added more features

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,7 @@
     <div class="site-wrapper-inner">
 
         <div class="cover-container">
-
-            <div class="masthead clearfix">
+            <div class="masthead clearfix navbar-fixed-top" style= "background-color: rgb(51, 51, 51)">
                 <div class="inner">
                     <h3 class="masthead-brand">Cover</h3>
                     <nav>
@@ -44,7 +43,6 @@
                     </nav>
                 </div>
             </div>
-
             <div class="inner cover page-1">
                 <ul class="pages">
                     <li class="login page">
@@ -78,13 +76,6 @@
                 <h1 class="cover-heading">Contact</h1>
 
             </div>
-
-            <div class="mastfoot">
-                <div class="inner">
-                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-                </div>
-            </div>
-
         </div>
 
     </div>
