--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <div class="cover-container">
             <div class="masthead clearfix navbar-fixed-top" style= "background-color: rgb(51, 51, 51)">
                 <div class="inner">
-                    <h3 class="masthead-brand">Cover</h3>
+                    <h3 class="masthead-brand">Jasmine</h3>
                     <nav>
                         <ul class="nav masthead-nav">
                             <li class="active"><a onclick="navigate(this);" href="#">Home</a></li>
@@ -62,7 +62,7 @@
                         <input class="inputMessage" placeholder="Type here..."/>
                         <input class="myInput" id="myInput" hidden="true" />
                     </li>
-                    <iframe id="sc-widget" src="https://w.soundcloud.com/player/?url=http://api.soundcloud.com/users/107767142/favorites" width="100%" height="10" scrolling="no" frameborder="no"></iframe>
+                    <iframe id="sc-widget" src="https://w.soundcloud.com/player/?url=http://api.soundcloud.com/users/107767142/favorites" width="100%" height="1" scrolling="no" frameborder="no"></iframe>
                 </ul>
 
             </div>
