--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,8 @@
 </head>
 <body>
 <div class="site-wrapper">
-
-    <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-            <div class="masthead clearfix navbar-fixed-top" style= "background-color: rgb(51, 51, 51)">
+    <div class="cover-container">
+            <div class="masthead clearfix">
                 <div class="inner">
                     <h3 class="masthead-brand">Jasmine</h3>
                     <nav>
@@ -46,7 +43,7 @@
             <div class="inner cover page-1">
                 <ul class="pages">
                     <li class="login page">
-                        <h1 class="cover-heading">Privacy</h1>
+                        <h3 class="cover-heading">Welcome</h3>
 
                         <div class="form">
                             <h3 class="title" style="color: khaki;">What's your nickname?</h3>
@@ -78,7 +75,6 @@
             </div>
         </div>
 
-    </div>
 
 </div>
 
