--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="#">
 
-    <title>Template Design</title>
+    <title>Jasmine</title>
 
     <!-- Bootstrap core CSS -->
 
@@ -21,12 +21,11 @@
     <![endif]-->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://52.10.37.93:3001/style.css">
 
 
 </head>
 <body>
-<div class="site-wrapper">
     <div class="cover-container">
             <div class="masthead clearfix">
                 <div class="inner">
@@ -75,17 +74,14 @@
             </div>
         </div>
 
-
-</div>
-
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="/responsivevoice.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/main.js"></script>
+<script src="http://52.10.37.93:3001/responsivevoice.js"></script>
+<script src="http://52.10.37.93:3001/socket.io/socket.io.js"></script>
+<script src="http://52.10.37.93:3001/main.js"></script>
 <script>//! annyang
 //! version : 1.6.0
 //! author  : Tal Ater @TalAter
@@ -116,7 +112,7 @@
     }
 
 </script>
-  <script src="/api.js" type="text/javascript"></script>
+  <script src="http://52.10.37.93:3001/api.js" type="text/javascript"></script>
   <script type="text/javascript">
 
 
