Added the server address

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 <script src="http://52.10.37.93:3001/socket.io/socket.io.js"></script>
 <script src="http://52.10.37.93:3001/main.js"></script>
 <script>//! annyang
-//! version : 1.6.0
+    //! version : 1.6.0
 //! author  : Tal Ater @TalAter
 //! license : MIT
 //! https://www.TalAter.com/annyang/
@@ -112,7 +112,7 @@
     }
 
 </script>
-  <script src="http://52.10.37.93:3001/api.js" type="text/javascript"></script>
+  <script src="api.js" type="text/javascript"></script>
   <script type="text/javascript">
 
 
