--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,12 @@
 
             <div class="inner cover page-2">
                 <h1 class="cover-heading">Features </h1>
+                <ul>
+                    <li><h3> Ask Jasmine Anything like @who is Spider Man , @where is Panama Canal or @what is time dilation</h3></li>
+                    <li><h3> By enabling the microPhone , say "Baby what is gum bacteria" or "Baby who are romans"</h3></li>
+                    <li><h3> Share Videos to everyone in the room by "* your_desired_video_name" e.g "* how was earth formed"</h3></li>
+                    <li><h3> You can also ask sam for weather , simple maths , root words of English words and SOON you'll be able to teach her as well</h3></li>
+                </ul>
 
             </div>
 
