--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <div class="cover-container">
             <div class="masthead clearfix">
                 <div class="inner">
-                    <h3 class="masthead-brand">Jasmine</h3>
+                    <h3 class="masthead-brand" style="background-color: #333333">Jasmine<image src="Jazmine_head.png" style="width: 2.0em"></image></h3>
                     <nav>
                         <ul class="nav masthead-nav">
                             <li class="active"><a onclick="navigate(this);" href="#">Home</a></li>
