--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <div class="cover-container">
             <div class="masthead clearfix">
                 <div class="inner">
-                    <h3 class="masthead-brand" style="background-color: #333333">Jazmine<image src="Jazmine_head.png" style="width: 2.0em"></image></h3>
+                    <h3 class="masthead-brand" style="background-color: #333333;color: wheat;">Jazmine<image src="Jazmine_head.png" style="width: 2.0em"></image></h3>
                     <nav>
                         <ul class="nav masthead-nav">
                             <li class="active"><a onclick="navigate(this);" href="#">Home</a></li>
@@ -64,7 +64,7 @@
             </div>
 
             <div class="inner cover page-2">
-                <h1 class="cover-heading">Features </h1>
+                <h1 class="cover-heading" style="color: wheat;">Features </h1>
                 <ul style="text-align: justify;position: absolute;top:8em;left:6em;">
                     <li><h3 style="color: cornflowerblue"> Ask Jazmine Anything like @who is Spider Man , @where is Panama Canal or @what is time dilation</h3></li>
                     <li><h3 style="color: tomato"> By enabling the microPhone , say "Baby what is gum bacteria" or "Baby who are romans"</h3></li>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="inner cover page-3">
-                <h1 class="cover-heading">Contact</h1>
+                <h1 class="cover-heading" style="color: wheat;">Contact</h1>
                 <ul style="position: absolute;top: 8em;left: 28em;">
                     <li><h2 style="color: #2B91AF">speak2arpit@gmail.com or +91-8447384035</h2></li>
                 </ul>
