--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
             <div class="inner cover page-2">
                 <h1 class="cover-heading" style="color: wheat;">Features </h1>
-                <ul style="text-align: justify;position: absolute;top:8em;left:6em;">
+                <ul style="text-align: justify;">
                     <li><h3 style="color: cornflowerblue"> Ask Jazmine Anything like @who is Spider Man , @where is Panama Canal or @what is time dilation</h3></li>
                     <li><h3 style="color: tomato"> By enabling the microPhone , say "Baby what is gum bacteria" or "Baby who are romans"</h3></li>
                     <li><h3 style="color: #2B91AF"> Share Videos to everyone in the room by "* your_desired_video_name" e.g "* how was earth formed"</h3></li>
@@ -77,7 +77,7 @@
 
             <div class="inner cover page-3">
                 <h1 class="cover-heading" style="color: wheat;">Contact</h1>
-                <ul style="position: absolute;top: 8em;left: 28em;">
+                <ul>
                     <li><h2 style="color: #2B91AF">speak2arpit@gmail.com or +91-8447384035</h2></li>
                 </ul>
 
@@ -191,7 +191,6 @@
     <script type="text/javascript">
         app.initialize();
         document.addEventListener('deviceready', function() {
-            $(function() {
                 var FADE_TIME = 150; // ms
                 var TYPING_TIMER_LENGTH = 400; // ms
                 var COLORS = [
@@ -662,7 +661,7 @@
                 });
             });
 
-        });
+
     </script>
 </body>
 </html>
