--- a/public/index.html
+++ b/public/index.html
@@ -65,12 +65,12 @@
 
             <div class="inner cover page-2">
                 <h1 class="cover-heading" style="color: wheat;">Features </h1>
-                <ul style="text-align: justify;">
-                    <li><h3 style="color: cornflowerblue"> Ask Jazmine Anything like @who is Spider Man , @where is Panama Canal or @what is time dilation</h3></li>
-                    <li><h3 style="color: tomato"> By enabling the microPhone , say "Baby what is gum bacteria" or "Baby who are romans"</h3></li>
-                    <li><h3 style="color: #2B91AF"> Share Videos to everyone in the room by "* your_desired_video_name" e.g "* how was earth formed"</h3></li>
-                    <li><h3 style="color: darkgreen"> You can also ask sam for weather , simple maths , root words of English words</h3></li>
-                    <li><h3 style="color: #cacaca"> By Typing Amaze me , It will play tops songs from Soundcloud. to change the song type "play next" or "play previous"</h3></li>
+                <ul style="text-align: justify;padding-right: 0.1em;">
+                    <li><h3 style="color: cornflowerblue;font-size: 14px;"> Ask Jazmine Anything like @who is Spider Man , @where is Panama Canal or @what is time dilation</h3></li>
+                    <li><h3 style="color: tomato;font-size: 14px;"> By enabling the microPhone , say "Baby what is gum bacteria" or "Baby who are romans"</h3></li>
+                    <li><h3 style="color: #2B91AF;font-size: 14px;"> Share Videos to everyone in the room by "* your_desired_video_name" e.g "* how was earth formed"</h3></li>
+                    <li><h3 style="color: darkgreen;font-size: 14px;"> You can also ask sam for weather , simple maths , root words of English words</h3></li>
+                    <li><h3 style="color: #cacaca";font-size: 14px;> By Typing Amaze me , It will play tops songs from Soundcloud. to change the song type "play next" or "play previous"</h3></li>
                 </ul>
 
             </div>
@@ -78,7 +78,7 @@
             <div class="inner cover page-3">
                 <h1 class="cover-heading" style="color: wheat;">Contact</h1>
                 <ul>
-                    <li><h2 style="color: #2B91AF">speak2arpit@gmail.com or +91-8447384035</h2></li>
+                    <li><h2 style="color: #2B91AF;font-size: 14px;">speak2arpit@gmail.com or +91-8447384035</h2></li>
                 </ul>
 
             </div>
