--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                     <li><h3 style="color: tomato;font-size: 14px;"> By enabling the microPhone , say "Baby what is gum bacteria" or "Baby who are romans"</h3></li>
                     <li><h3 style="color: #2B91AF;font-size: 14px;"> Share Videos to everyone in the room by "* your_desired_video_name" e.g "* how was earth formed"</h3></li>
                     <li><h3 style="color: darkgreen;font-size: 14px;"> You can also ask sam for weather , simple maths , root words of English words</h3></li>
-                    <li><h3 style="color: #cacaca";font-size: 14px;> By Typing Amaze me , It will play tops songs from Soundcloud. to change the song type "play next" or "play previous"</h3></li>
+                    <li><h3 style="color: #cacaca;font-size: 14px;"> By Typing Amaze me , It will play tops songs from Soundcloud. to change the song type "play next" or "play previous"</h3></li>
                 </ul>
 
             </div>
