--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://jazmine.co.in/style.css">-->
+    <link rel="stylesheet" href="http://jazmine.co.in/style.css">
     <!--<link rel="stylesheet" href="http://localhost:3001/style.css">-->
 
 
