--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,13 @@
     <div class="cover-container">
             <div class="masthead clearfix">
                 <div class="inner">
-                    <h3 class="masthead-brand" style="background-color: #333333;color: wheat;">Jazmine<image src="Jazmine_head.png" style="width: 2.0em"></image></h3>
+                    <h3 onclick="location.reload();" class="masthead-brand" style="background-color: #333333;color: wheat;">Jazmine<image src="Jazmine_head.png" style="width: 2.0em"></image></h3>
                     <nav>
                         <ul class="nav masthead-nav">
-                            <li class="active"><a onclick="navigate(this);" href="#">Home</a></li>
-                            <li><a onclick="navigate(this);" href="#">Features <sup style="color: #a03808">inside chat!</sup></a></li>
-                            <li><a onclick="navigate(this);" href="#">Contact</a></li>
+
+                            <li class="active"><a onclick="navigate(this);" href="#">Home <span class="glyphicon glyphicon-star" aria-hidden="true"></span></a></li>
+                            <li><a onclick="navigate(this);" href="#">Features <sup style="color: #a03808">inside chat! </sup><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span></a></li>
+                            <li><a onclick="navigate(this);" href="#">Contact <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> </a></li>
                         </ul>
                     </nav>
                 </div>
@@ -44,21 +45,21 @@
                 <ul class="pages">
                     <li class="login page">
                         <div style="margin-top: 4em;" class="form">
-                            <h3 class="title" style="color: khaki;">Choose your nickname?</h3>
+                            <h4 class="title" style="color: khaki;"> Choose your nickname? </h4>
                             <input class="usernameInput" type="text" maxlength="14" placeholder="Press Enter" />
-                            <h3 class="title" style="color: khaki;">Enter the Room</h3>
+                            <h4 class="title" style="color: khaki;">Enter the Room</h4>
                             <input class="roomnameInput" type="text" maxlength="14" placeholder="Press Enter" />
-                            <span style="font-size: 1.5em;color: khaki" >Or Join Rooms (No. of Users)</span>
+                            <span style="font-size: 1.2em;color: khaki" >Or Join Rooms (No. of Users)</span>
                             <div class="row">
                                 <div class="col-md-4">
                                     <ul class="suggestedRooms">
-                                        <li onclick="peopleNearMe()" style="cursor:pointer;background-color: #007A00">People Near Me!</li>
-                                        <li onclick="peopleNotSoNearMe()" style="cursor:pointer;background-color: #D83647">People Not So near ME!</li>
+                                        <li onclick="peopleNearMe()" style="cursor:pointer;background-color: #007A00">People Near Me <span class="glyphicon glyphicon-heart" aria-hidden="true"></span></li>
+                                        <li onclick="peopleNotSoNearMe()" style="cursor:pointer;background-color: #D83647">People Not So near ME <span class="glyphicon glyphicon-plane" aria-hidden="true"></span></li>
                                     </ul>
                                 </div>
                                 <div class="col-md-4">
                                     <ul class="suggestedRooms">
-                                        <li onclick="trustYourDestiny()" style="cursor: pointer;background-color: #19469D">Trust Your Destiny! </li>
+                                        <li onclick="trustYourDestiny()" style="cursor: pointer;background-color: #19469D">Trust Your Destiny <span class="glyphicon glyphicon-globe" aria-hidden="true"></span></li>
                                     </ul>
                                 </div>
                                 <div class="col-md-4">
@@ -71,7 +72,7 @@
                     </li>
                     <li class="chat page">
                         <div class="chatArea">
-                            <a class="changeRoom" onclick="navigate(this);" href="#">Change Room</a>
+                            <a class="changeRoom" onclick="location.reload()" href="#"><span onclick="location.reload()" class="glyphicon glyphicon-refresh" aria-hidden="true"></span></a>
                             <ul class="messages"></ul>
                         </div>
                         <input class="inputMessage" placeholder="Type here..."/>
@@ -83,21 +84,72 @@
             </div>
 
             <div class="inner cover page-2">
-                <h1 class="cover-heading" style="color: wheat;">Features </h1>
-                <ul id="features" style="text-align: justify;padding-right: 0.1em;">
-                    <li><h3 style="color: cornflowerblue;font-size: 14px;"> Ask Jazmine Anything like @who is Spider Man , @where is Panama Canal or @what is time dilation</h3></li>
-                    <li><h3 style="color: tomato;font-size: 14px;"> By enabling the microPhone , say "Baby what is gum bacteria" or "Baby who are romans"</h3></li>
-                    <li><h3 style="color: #2B91AF;font-size: 14px;"> Share Videos to everyone in the room by "* your_desired_video_name" e.g "* how was earth formed"</h3></li>
-                    <li><h3 style="color: darkgreen;font-size: 14px;"> You can also ask sam for weather , simple maths , root words of English words</h3></li>
-                    <li><h3 style="color: #cacaca;font-size: 14px;"> By Typing Amaze me , It will play tops songs from Soundcloud. to change the song type "play next" or "play previous"</h3></li>
-                </ul>
+                <h3 class="cover-heading" style="color: wheat;">Features </h3>
 
+                <div class="row" style="margin-top: 40px">
+                    <div class="col-sm-6 col-md-4">
+                        <div style="background-color: #333;border: 1px solid #333;" class="thumbnail">
+                            <img id="jazmine" src="Jazmine.png" alt="Jazmine">
+                            <div class="caption">
+                                <h3 style="color: azure">Virtual Assitant </h3>
+                                <p style="color: azure">Ask Jazmine Anything like @who is Spider Man , @where is Panama Canal or @what is time dilation ... By enabling the microPhone , say "Baby what is gum bacteria" or "Baby who are romans"</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div style="background-color: #333;border: 1px solid #333;" class="thumbnail">
+                            <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fundefined&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe>
+                            <div class="caption">
+                                <h3 style="color: azure">Music & Genre</h3>
+                                <p style="color: azure">By Typing Amaze me , It will play tops songs from Soundcloud. to change the song type "play next" or "play previous"</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div style="background-color: #333;border: 1px solid #333;" class="thumbnail">
+                          <img id="youTube" src="youtube.png" alt="YouTube">
+                          <div class="caption">
+                             <h3 style="color: azure">Youtube Videos</h3>
+                             <p style="color: azure">Share Videos to everyone in the room by "* your_desired_video_name" e.g "* how was earth formed"</p>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <div style="background-color: #333;border: 1px solid #333;" class="thumbnail">
+                            <img style="width: 22%;" src="wikipedia.png" alt="Wikipedia">
+                            <div class="caption">
+                                <h3 style="color: azure">Wikipedia</h3>
+                                <p style="color: azure">asdasdasd asda sdasda s adasd asd asd asd a dsad asdas dasd asdasd asdasd asd asda sdas dsa</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div style="background-color: #333;border: 1px solid #333;" class="thumbnail">
+                            <img style="width: 20%;" src="openweather.png" alt="Open Weather">
+                            <div class="caption">
+                                <h3 style="color: azure">Weather Updates</h3>
+                                <p style="color: azure">You can also ask sam for weather , simple maths , root words of English words</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div style="background-color: #333;border: 1px solid #333;" class="thumbnail">
+                            <img style="width: 37%;" src="comingsoon.png" alt="Coming Soon">
+                            <div class="caption">
+                                <h3 style="color: azure">Coming Soon </h3>
+                                <p style="color: azure">asdasdasd asda sdasda s adasd asd asd asd a dsad asdas dasd asdasd asdasd asd asda sdas dsa</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="inner cover page-3">
                 <h1 class="cover-heading" style="color: wheat;">Contact</h1>
                 <ul style="padding: 1em 0em 0em 0em;">
-                    <li><h2 style="color: #2B91AF;font-size: 14px;">speak2arpit@gmail.com or +91-8447384035</h2></li>
+                    <li style="position: relative;left: 35%;"><h2 class="well well-lg" style="width: 29%;color: #333333;font-size: 14px;"> For any feedback and suggestion , Please drop a mail to <a style="color: #333333" href="mailto:speak2arpit@gmail.com" target="_top">speak2arpit@gmail.com</a></h2></li>
                 </ul>
 
             </div>
@@ -106,7 +158,7 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="jquery-1.10.2.min.js"></script>
     <script src="api.js" type="text/javascript"></script>
     <script type="text/javascript">
 
@@ -130,12 +182,11 @@
 
                 })
                 $(nav).parent().addClass("active");
-                if ($(nav).text() == "Features inside chat!"){
-
+                if ($(nav).text() == "Features inside chat! "){
                     $page1.hide();
                     $page2.show();
                     $page3.hide();
-                }else if($(nav).text() == "Contact"){
+                }else if($(nav).text() == "Contact  "){
                     $page1.hide();
                     $page3.show();
                     $page2.hide();
