Changed Css of Contact Page

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
             <div class="inner cover page-3">
                 <h1 class="cover-heading" style="color: wheat;">Contact</h1>
                 <ul style="padding: 1em 0em 0em 0em;">
-                    <li style="position: relative;left: 35%;"><h2 class="well well-lg" style="width: 29%;color: #333333;font-size: 14px;"> For any feedback and suggestion , Please drop a mail to <a style="color: #333333" href="mailto:speak2arpit@gmail.com" target="_top">speak2arpit@gmail.com</a></h2></li>
+                    <li id="contactpage" ><h2 class="well well-lg" style="color: #333333;font-size: 14px;"> For any feedback and suggestion , Please drop a mail to <a style="color: #333333" href="mailto:speak2arpit@gmail.com" target="_top">speak2arpit@gmail.com</a></h2></li>
                 </ul>
 
             </div>
